# ME599_ML-in-Controls

./: README.md
src/commander/: CMakeLists.txt  package.xml
src/commander/commander/: optimize_pid.py  pub_command.py
src/commander/launch/: commander.launch.py
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/config/: controller.yaml
src/robot_control/launch/: robot_control.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/robot/: cart_pole.ros2_control.xacro  cart_pole.sdf  cart_pole.urdf  cart_pole.urdf.xacro
src/robot_description/urdf/base/: base.urdf.xacro
src/robot_description/urdf/cart/: cart.transmission.xacro  cart.urdf.xacro
src/robot_description/urdf/pole/: pole.urdf.xacro
src/robot_launch/: CMakeLists.txt  package.xml
src/robot_launch/launch/: launch_simulation.launch.py
src/robot_launch/worlds/: robomaster_rale.world
