<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeset="xml"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.0</version>
  <description>The robot_control package</description>
  <maintainer email="db7529@uw.edu">Devansh A. Bajwala</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>effort_controllers</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros2_controllers</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>