<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeset="xml"?>
<package format="3">
  <name>robot_launch</name>
  <version>0.0.0</version>
  <description>The robot_launch package</description>
  <maintainer email="db7529@uw.edu">Devansh A. Bajwala</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>gazebo_ros</depend>
  <depend>robot_description</depend>
  <depend>robot_control</depend>
  <depend>commander</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>